<resources>
    <string name="app_name">AppNews</string>

    <!--
    LOGIN ACTIVITY
    -->
    <string name="appnews">APPNEWS</string>
    <string name="login">LOGIN</string>

    <!--
    MAIN ACTIVITY
    -->
    <string name="user">NAME</string>

    <!--
    MENU
    -->
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>

    <!--
    ITEM LAYOUT
    -->
    <string name="image">IMAGE</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <!--
    BOTTOM_NAV
    -->
    <string name="home">Home</string>
    <string name="favs">Favs</string>

    <!--
    FILTER ACTIVITY
    -->
    <string name="business">BUSINESS</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="general">GENERAL</string>
    <string name="health">HEALTH</string>
    <string name="science">SCIENCE</string>
    <string name="sports">SPORTS</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="all">ALL</string>
    <string name="returnB">RETURN</string>
    <string name="latest">LATEST</string>
    <string name="keywords">KEYWORDS</string>

    <!--
    SETTINGS
    -->
    <string name="countries">COUNTRY</string>
    <string name="languages">LANGUAGE</string>
    <string name="accept">ACCEPT</string>

</resources>